# cc-switch

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  4d81aad.patch  AGENTS.md  CC_SWITCH_CONFIG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATION_LOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  FIX_SUMMARY.md  FORK_README.md  HTTP_PROXY_FIX.md  IIAGENT_UPSTREAM_ISSUES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PROGRESS.md  LITERBIKE_QUIC_HISTORY.md  MULTI_API_KEY_SUPPORT.md  NARROW_FIT_REDESIGN.md  NVIDIA_FAILURE_ANALYSIS.md  OPENCODE_INTEGRATION_PLAN.md  PHASE4_SUMMARY.md  PROXY_COMPARISON.md  QUICKSTART.md  QUICK_SUMMARY.md  README.md  README_DE.md  README_EN.md  README_JA.md  README_ZH.md  REFACTORING_ANALYSIS.md  REFACTORING_GUIDE.md  SECURITY.md  START-TAURI.md  (+37 more)
.claude/: settings.local.json
.github/: CONTRIBUTING.md  FORK_STATUS.md  FUNDING.yml  dependabot.yml
.planning/: PLAN.md
cc-switch-main/: package.json  pnpm-workspace.yaml
configs/: models.yaml  strategies.yaml
crates/cc-switch-cli/: Cargo.toml
crates/cc-switch-cli/src/: cli.rs  e2e_session.rs  main.rs
crates/cc-switch-cli/src/handlers/: backup.rs  common.rs  config.rs  doctor.rs  env.rs  host.rs  import_export.rs  mcp.rs  mod.rs  omo.rs  openclaw.rs  prompt.rs  provider.rs  proxy.rs  session.rs  settings.rs  skill.rs  usage.rs  webdav.rs  workspace.rs
crates/cc-switch-cli/src/output/: json.rs  mod.rs  table.rs  yaml.rs
crates/cc-switch-cli/tests/: cli_behavior.rs
crates/cc-switch-core/: Cargo.toml
crates/cc-switch-core/src/: app_config.rs  codex_config.rs  config.rs  error.rs  gemini_config.rs  lib.rs  openclaw_config.rs  opencode_config.rs  prompt.rs  prompt_files.rs  provider.rs  settings.rs  store.rs  usage_script.rs
crates/cc-switch-core/src/database/: backup.rs  dao.rs  mod.rs  schema.rs
crates/cc-switch-core/src/deeplink/: mcp.rs  parser.rs  tests.rs
crates/cc-switch-core/src/mcp/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  validation.rs
crates/cc-switch-core/src/proxy/: circuit_breaker.rs  failover_switch.rs  forwarder.rs  handler_context.rs  health.rs  mod.rs  provider_router.rs  response_processor.rs  server.rs  types.rs
crates/cc-switch-core/src/proxy/usage/: logger.rs
crates/cc-switch-core/src/services/: auto_launch.rs  config.rs  doctor.rs  global_proxy.rs  host.rs  mcp.rs  mod.rs  omo.rs  plugin.rs  prompt.rs  provider.rs  proxy.rs  runtime.rs  session.rs  settings.rs  skill.rs  speedtest.rs  stream_check.rs  usage.rs  webdav.rs  webdav_sync.rs  workspace.rs
crates/cc-switch-core/src/services/provider/: endpoints.rs  gemini_auth.rs  live.rs  usage.rs
crates/cc-switch-core/src/services/webdav_sync/: archive.rs
doc/: DEVELOPMENT_AND_TESTING.md  webdav-module-sync-isolated-readme.md  webdav-module-sync-risk-and-merge.md
docs/: ENDPOINT_CACHE_SYSTEM.md  IIAGENT_CAPABILITY_MATRIX.md  MACOS-SIGNING-SETUP.md  MODEL_PICKER.md  PROVIDER_CAPABILITY_MATRIX.md  acceptance-test-checklist.md  add-kilo-support.md  add-qoder-cli-support.md  backend-analysis.md  build-guide.md  changes-2026-03-04-upstream-proxy.md  claude-proxy-verification-commands.md  codex-chat-completions-adapter-notes.md  dev-mode-ops-zh.md  eager-spinning-plum.md  environment-doctor-design.md  final-acceptance-report.md  fork-sync.md  guide-cross-model-failover.md  implementation-complete.md  implementation.md  macos-10.15-compat.md  manual-testing-guide.md  orchestration-m2-todos.md  plan-cross-model-failover.md  pr-review-fixes.md  proxy-data-logging-zh.md  proxy-guide-zh.md  release-note-v3.9.0-zh.md  repo-metadata.md  todo.md  tui.md  working-directory-plan.md
flatpak/: README.md  com.ccdoctor.desktop.yml  (+5 more)
keymux/: ACL_VAULT.md  CONSOLE_DESIGN.md  Cargo.toml  IIAGENT_INTEGRATION.md  LITEBIKE_OPENAI_API.md  LITEBIKE_RADIOS.md  QUIC_SERVER.md  README.md  README_CC_SWITCH.md  openapi.yaml  test-integration.sh
keymux/src/: acl_vault.rs  carrier.rs  feed.rs  handlers.rs  key_vault.rs  known_peers.rs  main.rs  openapi.rs  quic_server.rs  ranker.rs  router.rs  secret_lock.rs  types.rs
keymux/src/quic/: engine.rs  mod.rs  protocol.rs  server.rs
qa/cli-e2e/: Cargo.toml  README.md
qa/cli-e2e/fixtures/deeplink/: provider.url
qa/cli-e2e/fixtures/import/: merge.json  skills.json
qa/cli-e2e/fixtures/live-config/base/.claude/: settings.json
qa/cli-e2e/fixtures/live-config/base/.codex/: auth.json  config.toml
qa/cli-e2e/fixtures/live-config/base/.config/opencode/: opencode.json
qa/cli-e2e/fixtures/live-config/base/.gemini/: settings.json
qa/cli-e2e/fixtures/live-config/base/.openclaw/: openclaw.json
qa/cli-e2e/fixtures/mcp/: bare-server.json  claude-import.json  full-server.json
qa/cli-e2e/fixtures/prompts/: codex-import.md  primary.md  secondary.md  updated.md
qa/cli-e2e/fixtures/providers/: codex-settings.json  gemini-settings.json  openclaw-settings.json  opencode-settings.json
qa/cli-e2e/fixtures/skills/ssot/demo-skill/: SKILL.md
qa/cli-e2e/scripts/: build-cli.sh  run-local.sh  run-scenario.sh
qa/cli-e2e/src/: main.rs
qa/cli-e2e/src/asserts/: mod.rs
qa/cli-e2e/src/mock/: mod.rs  webdav.rs
qa/cli-e2e/src/runner/: mod.rs
qa/cli-e2e/src/sandbox/: mod.rs
qa/cli-e2e/src/scenarios/: backup_round_trip.rs  cli_productization.rs  config_smoke.rs  env_conflict_flow.rs  host_runtime_info.rs  import_export_deeplink.rs  mcp_sync.rs  mod.rs  omo_flow.rs  openclaw_config_flow.rs  prompt_live_sync.rs  provider_common_config.rs  provider_endpoints.rs  provider_live_switch.rs  provider_stream_check.rs  provider_universal_flow.rs  provider_usage_script.rs  proxy_advanced_config.rs  proxy_failover_runtime.rs  proxy_takeover_restore.rs  session_flow.rs  settings_structured_flow.rs  skill_local_lifecycle.rs  skill_repo_and_import.rs  usage_via_real_proxy_traffic.rs  util.rs  webdav_sync_flow.rs  workspace_memory_flow.rs
src-cli/: Cargo.toml
src-cli/src/: main.rs  output.rs
src-cli/src/tui/: action.rs  app.rs  event.rs  mod.rs  ui.rs
src-cli/src/tui/components/: app_tabs.rs  detail.rs  mod.rs  modal.rs  provider_list.rs  status_bar.rs
(+2286 files in other folders)
