[package]
name = "keymux"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible LLM proxy with /provider/model routing"
license = "AGPL-3.0"
repository = "https://github.com/jnorthrup/literbike"

[dependencies]
# HTTP server (TCP fallback)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database (encrypted SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
parking_lot = "0.12"

# Crypto for key encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# HTTP client for upstream requests
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }

# Network interface detection
if-addrs = "0.15"

# URL parsing
url = "2.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Directories
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# QUIC transport (self-contained)
socket2 = "0.5"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
